force-app/main/default/objects/Address_Validation__c/Address_Validation__c.object-meta.xml
<CustomObject>
    <label>Address Validation</label>
    <nameField>
        <label>Address Validation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>