force-app/main/default/objects/Address_Validation__c/fields/Valid_City__c.field-meta.xml
<CustomField>
    <fullName>Valid_City__c</fullName>
    <label>Valid City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>