force-app/main/default/objects/Address_Validation__c/fields/Valid_Country__c.field-meta.xml
<CustomField>
    <fullName>Valid_Country__c</fullName>
    <label>Valid Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>