force-app/main/default/objects/Address_Validation__c/fields/Valid_County__c.field-meta.xml
<CustomField>
    <fullName>Valid_County__c</fullName>
    <label>Valid County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>