force-app/main/default/objects/Address_Validation__c/fields/Valid_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Valid_Postal_Code__c</fullName>
    <label>Valid Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>