force-app/main/default/objects/Address_Validation__c/fields/Valid_State__c.field-meta.xml
<CustomField>
    <fullName>Valid_State__c</fullName>
    <label>Valid State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>