force-app/main/default/objects/Address_Validation__c/fields/Valid_Status__c.field-meta.xml
<CustomField>
    <fullName>Valid_Status__c</fullName>
    <label>Valid Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>