force-app/main/default/objects/Address_Validation__c/fields/Valid_Street__c.field-meta.xml
<CustomField>
    <fullName>Valid_Street__c</fullName>
    <label>Valid Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>