force-app/main/default/objects/Address_Validation__c/fields/Valid_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Valid_Timestamp__c</fullName>
    <label>Valid Timestamp</label>
    <type>DateTime</type>
</CustomField>